@@ -1,4 +1,4 @@
-/* $Id: winimagepeldr_new.cpp,v 1.1 2001-05-30 08:23:21 sandervl Exp $ */
+/* $Id: winimagepeldr_new.cpp,v 1.2 2001-05-30 18:32:15 phaller Exp $ */
 
 /*
  * Win32 PE loader Image base class
@@ -59,7 +59,6 @@
 //Define COMMIT_ALL to let the pe loader commit all sections of the image
 //This is very useful during debugging as you'll get lots of exceptions
 //otherwise.
-
 //#ifdef DEBUG
 #define COMMIT_ALL
 //#endif
@@ -113,6 +112,10 @@ Win32PeLdrImage::Win32PeLdrImage(char *pszFileName, BOOL isExe) :
     nrsections(0), imageSize(0), dwFlags(0), section(NULL),
     imageVirtBase(-1), realBaseAddress(0), imageVirtEnd(0),
     nrNameExports(0), nrOrdExports(0),
+#ifdef VERIFY_LOADER
+    nameexports(NULL), ordexports(NULL),
+    curnameexport(NULL), curordexport(NULL),
+#endif
     memmap(NULL), pFixups(NULL), dwFixupSize(0)
 {
  HFILE  dllfile;
@@ -144,7 +147,7 @@ Win32PeLdrImage::Win32PeLdrImage(char *pszFileName, BOOL isExe) :
 
     // create objects for fast API lookup
     pLookupOrdinal = new CIndexLookupLimit(0, 65535);
-    pLookupName    = new CHashtableLookup(79);
+    pLookupName    = new CHashtableLookup(503);
 }
 //******************************************************************************
 //******************************************************************************
@@ -166,6 +169,14 @@ Win32PeLdrImage::~Win32PeLdrImage()
 
     if(realBaseAddress)
         DosFreeMem((PVOID)realBaseAddress);
+
+#ifdef VERIFY_LOADER
+    if(nameexports)
+        free(nameexports);
+
+    if(ordexports)
+        free(ordexports);
+#endif
 
     if(section)
         free(section);
@@ -1372,6 +1383,38 @@ void Win32PeLdrImage::AddNameExport(ULONG virtaddr, char *apiname, ULONG ordinal
 
     // also add the ordinal export to the lookup cache
     pLookupOrdinal->addElement(ordinal, (void*)uv);
+
+#ifdef VERIFY_LOADER
+    ULONG nsize;
+
+    if(nameexports == NULL) {
+        nameExportSize= 4096;
+        nameexports   = (NameExport *)malloc(nameExportSize);
+        curnameexport = nameexports;
+    }
+    nsize = (ULONG)curnameexport - (ULONG)nameexports;
+    if(nsize + sizeof(NameExport) + strlen(apiname) > nameExportSize) {
+        nameExportSize += 4096;
+        char *tmp = (char *)nameexports;
+        nameexports = (NameExport *)malloc(nameExportSize);
+        memcpy(nameexports, tmp, nsize);
+        curnameexport = (NameExport *)((ULONG)nameexports + nsize);
+        free(tmp);
+    }
+    if(fAbsoluteAddress) {//forwarders use absolute address
+        curnameexport->virtaddr = virtaddr;
+    }
+    else curnameexport->virtaddr = realBaseAddress + (virtaddr - oh.ImageBase);
+    curnameexport->ordinal  = ordinal;
+    *(ULONG *)curnameexport->name = 0;
+    strcpy(curnameexport->name, apiname);
+
+    curnameexport->nlength = strlen(apiname) + 1;
+    if(curnameexport->nlength < sizeof(curnameexport->name))
+        curnameexport->nlength = sizeof(curnameexport->name);
+
+    curnameexport = (NameExport *)((ULONG)curnameexport->name + curnameexport->nlength);
+#endif
 }
 //******************************************************************************
 //******************************************************************************
@@ -1389,6 +1432,21 @@ void Win32PeLdrImage::AddOrdExport(ULONG virtaddr, ULONG ordinal, BOOL fAbsolute
 
     // add ordinal export to the lookup cache
     pLookupOrdinal->addElement((int)ordinal, (void*)uv);
+
+
+#ifdef VERIFY_LOADER
+    if(ordexports == NULL) {
+        ordexports   = (OrdExport *)malloc(nrOrdExports * sizeof(OrdExport));
+        curordexport = ordexports;
+    }
+    if(fAbsoluteAddress) {//forwarders use absolute address
+        curordexport->virtaddr = virtaddr;
+    }
+    else curordexport->virtaddr = realBaseAddress + (virtaddr - oh.ImageBase);
+
+    curordexport->ordinal  = ordinal;
+    curordexport++;
+#endif
 }
 //******************************************************************************
 //******************************************************************************
@@ -1802,20 +1860,119 @@ ULONG Win32PeLdrImage::getImageSize()
 }
 //******************************************************************************
 //******************************************************************************
+#ifdef VERIFY_LOADER
+ULONG Win32PeLdrImage::new_getApi(char *name)
+#else
+ULONG Win32PeLdrImage::getApi(char *name)
+#endif
+{
+    // ordinal export from the lookup cache
+    return (ULONG)pLookupName->getElement(name);
+}
+//******************************************************************************
+//******************************************************************************
+#ifdef VERIFY_LOADER
+ULONG Win32PeLdrImage::new_getApi(int ordinal)
+#else
+ULONG Win32PeLdrImage::getApi(int ordinal)
+#endif
+{
+    // ordinal export from the lookup cache
+    return (ULONG)pLookupOrdinal->getElement(ordinal);
+}
+//******************************************************************************
+//******************************************************************************
+#ifdef VERIFY_LOADER
 ULONG Win32PeLdrImage::getApi(char *name)
 {
-    // ordinal export from the lookup cache
-    void* pNamed = pLookupName->getElement(name);
-    return (ULONG)pNamed;
+    ULONG ulVerify1 = new_getApi(name);
+    ULONG ulVerify2 = old_getApi(name);
+
+    if (ulVerify1 != ulVerify2)
+        dprintf((LOG,
+                 "WinImagePeLdr::getApi(%s) difference: ulVerify1=%08xh, ulVerify2=%08xh\n",
+                 name,
+                 ulVerify1,
+                 ulVerify2));
+
+    return ulVerify2;
 }
-//******************************************************************************
-//******************************************************************************
+
+
 ULONG Win32PeLdrImage::getApi(int ordinal)
 {
-    // ordinal export from the lookup cache
-    void* pOrdinal = pLookupOrdinal->getElement(ordinal);
-    return (ULONG)pOrdinal;
+    ULONG ulVerify1 = new_getApi(ordinal);
+    ULONG ulVerify2 = old_getApi(ordinal);
+
+    if (ulVerify1 != ulVerify2)
+        dprintf((LOG,
+                 "WinImagePeLdr::getApi(%d) difference: ulVerify1=%08xh, ulVerify2=%08xh\n",
+                 ordinal,
+                 ulVerify1,
+                 ulVerify2));
+
+    return ulVerify2;
 }
+
+
+
+
+ULONG Win32PeLdrImage::old_getApi(char *name)
+{
+  ULONG       apiaddr, i, apilen;
+  char       *apiname;
+  char        tmp[4];
+  NameExport *curexport;
+  ULONG       ulAPIOrdinal;                      /* api requested by ordinal */
+
+    apilen = strlen(name) + 1;
+    if(apilen < 4)
+    {
+        *(ULONG *)tmp = 0;
+        strcpy(tmp, name);
+        apiname = tmp;
+        apilen  = 4;
+    }
+    else  apiname = name;
+
+    curexport = nameexports;
+    for(i=0; i<nrNameExports; i++)
+    {
+        if(apilen == curexport->nlength &&
+           *(ULONG *)curexport->name == *(ULONG *)apiname)
+        {
+            if(strcmp(curexport->name, apiname) == 0)
+                return(curexport->virtaddr);
+        }
+        curexport = (NameExport *)((ULONG)curexport->name + curexport->nlength);
+    }
+    return(0);
+}
+//******************************************************************************
+//******************************************************************************
+ULONG Win32PeLdrImage::old_getApi(int ordinal)
+{
+ ULONG       apiaddr, i;
+ OrdExport  *curexport;
+ NameExport *nexport;
+
+    curexport = ordexports;
+    for(i=0;i<nrOrdExports;i++) {
+        if(curexport->ordinal == ordinal)
+            return(curexport->virtaddr);
+        curexport++;
+    }
+    //Name exports also contain an ordinal, so check this
+    nexport = nameexports;
+    for(i=0;i<nrNameExports;i++) {
+        if(nexport->ordinal == ordinal)
+            return(nexport->virtaddr);
+
+        nexport = (NameExport *)((ULONG)nexport->name + nexport->nlength);
+    }
+    return(0);
+}
+#endif
 //******************************************************************************
 //Returns required OS version for this image
 //******************************************************************************
